--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,14 +5,17 @@
 	</head>
 
 	<body>
-		<p id="status">ON</p>
-		<label id="toggle" class="switch">
-		  <input id="status_ck" type="checkbox">
-		  <span class="slider round"></span>
-		</label>
+		<div id="container">
+			<p id="status">ON</p>
+			<label id="toggle" class="switch">
+			  <input id="status_ck" type="checkbox" checked>
+			  <span class="slider round"></span>
+			</label>
 
-		<p id="rolls">Rolls: 0</p>
-		<p id="balance">0.00000000 BTC</p>
+			<p id="rolls">Rolls: 0</p>
+			<p id="balance">0.00000000 BTC</p>
+		</div>
+
 
 		<script src="popup-core.js"></script>
 	</body>
