--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,6 +9,10 @@
 
 <body>
 	<div id="container">
+		<center>
+			<a style="margin-left:80px;" href="https://a-ads.com?partner=1643535">Advertise with Anonymous Ads</a><br /><br />
+	<iframe data-aa="1643535" src="https://ad.a-ads.com/1643535?size=320x50" scrolling="no" style="width:320px; height:50px; border:0px; padding:10; overflow:hidden" allowtransparency="true"></iframe>
+</center>
 		<p id="countdown">0 remaining</p>
 		<p id="status">ON</p>
 		<label id="toggle" class="switch">
