new options menu

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -71,7 +71,7 @@
 					<td>
 						<div class="checkbox-container">
 							<span>Free BTC:</span>
-							<input type="checkbox" id="freebtc" name="rewardsbonus" value="freebtc" checked="checked" />
+							<input type="checkbox" id="freebtc" name="rewardsbonus" value="freebtc" />
 							<label for="freebtc"></label>
 							<div class="active-circle"></div>
 						</div>
@@ -85,7 +85,7 @@
 						<br />
 						<div class="checkbox-container">
 							<span>Fun Tokens</span>
-							<input type="checkbox" id="funtokens" name="rewardsbonus" checked="checked"
+							<input type="checkbox" id="funtokens" name="rewardsbonus" 
 								value="funtokens" />
 							<label for="funtokens"></label>
 							<div class="active-circle"></div>
