--- a/popup/popup.html
+++ b/popup/popup.html
@@ -108,7 +108,9 @@
 			<table class="table">
 				<tr>
 					<td>Author:</td>
-					<td>NickisGhosty</td>
+					<td>
+						<a href="https//github.com/nickisghosty">NickisGhosty</a>
+					</td>
 				</tr>
 				<tr>
 					<td>Website:</td>
@@ -117,10 +119,14 @@
 				</tr>
 				<tr><td>Contact:</td><td><a href="mailto:nickisghosty@gmail.com">Email</a>
 				</td></tr>
+				<tr><td>Donate?</td>
+					<td>
+						BTC:<br /> <span style="font-style:none; color:#fff">3L4Azy87dLSffpTfghhYBiJDBRoNcwC5Fc</span>
+					</td></tr>
 			</table>
 		</div>
 	</div>
-
+<iframe data-aa="1120341" src="//acceptable.a-ads.com/1120341" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;" ></iframe>
 	<script type="application/javascript" src="popup-script.js"></script>
 </body>
 
