--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,11 +11,15 @@
 
 <body>
 	<div id="container">
-		<a style="margin-left:auto;margin-right:auto;text-align:center;"
-			href="https://a-ads.com?partner=1643535">Advertise with Anonymous
-			Ads</a><br /><br />
-		<iframe data-aa="1643535" src="https://ad.a-ads.com/1643535?size=320x50" scrolling="no"
-			style="width:320px; height:50px; border:0px; overflow:hidden" allowtransparency="true"></iframe>
+		<iframe data-aa="1120341" src="https://acceptable.a-ads.com/1120341"
+				style="width:320px; height:50px; border:0px;
+				padding:10;
+background-color: transparent;"></iframe>
+	
+	
+	
+	
+	
 
 		<div class="tabs">
 			<a href="#">
@@ -126,8 +130,9 @@
 			</table>
 		</div>
 	</div>
-<iframe data-aa="1120341" src="//acceptable.a-ads.com/1120341" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;" ></iframe>
-	<script type="application/javascript" src="popup-script.js"></script>
+<a href="https://a-ads.com?partner=1643535">Advertise with Anonymous Ads</a><br /><br />
+<iframe data-aa="1643535" src="https://ad.a-ads.com/1643535?size=320x50" scrolling="no" style="width:320px; height:50px; border:0px; padding:10; 
+overflow:hidden" allowtransparency="true"></iframe>
 </body>
 
 </html>
