--- a/popup/popup.html
+++ b/popup/popup.html
@@ -133,6 +133,7 @@ background-color: transparent;"></iframe>
 <a href="https://a-ads.com?partner=1643535">Advertise with Anonymous Ads</a><br /><br />
 <iframe data-aa="1643535" src="https://ad.a-ads.com/1643535?size=320x50" scrolling="no" style="width:320px; height:50px; border:0px; padding:10; 
 overflow:hidden" allowtransparency="true"></iframe>
+	<script type="application/javascript" src="popup-script.js"></script>
 </body>
 
 </html>
